Version 1.8.4 * Bugfix version parsing * some code cleanup